--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pip==24.0.0
 pylint==3.0.0
 pytest==7.4.2
 pytest-cov==4.1.0
@@ -7,4 +8,4 @@ black==23.9.1
 streamlit==1.28.0
 pandas==2.1.4
 watchdog==3.0.0
-plotly
+plotly==5.18.0
