--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,8 @@ pytest-cov==4.1.0
 black==23.9.1
 #ipython==8.13.0
 
-streamlit==1.31.0
-pandas==2.0.3
-watchdog==3.0.0
+streamlit==1.34.0
+pandas==2.2.2
+watchdog==4.0.0
 plotly==5.18.0
+openpyxl==3.1.2
