--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+pip>=24.0.0
+
 pylint==3.0.0
 pytest==7.4.2
 pytest-cov==4.1.0
 black==23.9.1
 #ipython==8.13.0
 
-streamlit==1.28.0
+streamlit>=1.38.0
